Replace uses of Unsafe with var handles